[gd_scene load_steps=6 format=2]

[ext_resource path="res://Palace/Background/planet2.png" type="Texture" id=1]
[ext_resource path="res://Palace/Background/planet1.png" type="Texture" id=2]
[ext_resource path="res://Palace/Background/space.jpeg" type="Texture" id=3]
[ext_resource path="res://Palace/Background/planet3.png" type="Texture" id=4]
[ext_resource path="res://World/SpaceParallaxBackground.gd" type="Script" id=5]

[node name="ParallaxBackground" type="ParallaxBackground"]
layer = -10
scroll_offset = Vector2( -59.9534, 1.91854 )
script = ExtResource( 5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.05, 0.05 )

[node name="space" type="Sprite" parent="ParallaxLayer"]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="ParallaxLayer1" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.1, 0.1 )

[node name="planet1" type="Sprite" parent="ParallaxLayer1"]
position = Vector2( 53.3371, -78.2838 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="planet2" type="Sprite" parent="ParallaxLayer1"]
position = Vector2( 703.803, 456.346 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="planet3" type="Sprite" parent="ParallaxLayer1"]
position = Vector2( -727.31, -136.104 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.13, 0.13 )

[node name="planet4" type="Sprite" parent="ParallaxLayer2"]
position = Vector2( 109.208, -116.483 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="planet6" type="Sprite" parent="ParallaxLayer2"]
position = Vector2( 584.707, -558.127 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.16, 0.16 )

[node name="planet2" type="Sprite" parent="ParallaxLayer3"]
position = Vector2( -215.279, 336.686 )
scale = Vector2( 0.263, 0.263 )
texture = ExtResource( 1 )

[node name="planet3" type="Sprite" parent="ParallaxLayer3"]
position = Vector2( -772.397, 740.236 )
scale = Vector2( 0.163, 0.163 )
texture = ExtResource( 1 )
